// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchSuggestions > matches the snapshot 1`] = `
"<div>
  <div class="centerItems spaceBetween">
    <div></div>
    <div class="centerItems"><button class="centerItems buttonLink" draggable="false" type="button" title="Close search suggestions">
        <phx aria-hidden="true" class="icon" size="24" weight="bold"></phx><span class="clamp text visuallyHidden"> Close </span>
      </button></div>
  </div>
  <div class="centerAll noResultsFound"> No results found </div>
</div>"
`;

exports[`SearchSuggestions > when the showSuggestions prop is false > matches the snapshot 1`] = `"<!--v-if-->"`;

exports[`SearchSuggestions > when the showSuggestions prop is true > when the loading prop is false > when the suggestions prop is not an empty array > matches the snapshot 1`] = `
"<div>
  <div class="centerItems spaceBetween">
    <div></div>
    <div class="centerItems"><button class="centerItems buttonLink" draggable="false" type="button" title="Close search suggestions">
        <phx aria-hidden="true" class="icon" size="24" weight="bold"></phx><span class="clamp text visuallyHidden"> Close </span>
      </button></div>
  </div>
  <div class="section" data-test-id="search-suggestion-group">
    <div class="centerItems spaceBetween searchSpacing">
      <div class="smallFont title">Albums</div><a class="smallFont link" data-test-id="viewAllLink"> View all </a>
    </div><a class="centerItems searchItem"><span class="centerItems searchIcon"><phvinylrecord size="18"></phvinylrecord></span><span class="clamp searchName">album-suggestion-0</span>
      <ul class="commaList clamp smallFont searchArtistLinks">
        <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
        <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
      </ul>
    </a><a class="centerItems searchItem"><span class="centerItems searchIcon"><phvinylrecord size="18"></phvinylrecord></span><span class="clamp searchName">album-suggestion-1</span>
      <ul class="commaList clamp smallFont searchArtistLinks">
        <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
        <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
      </ul>
    </a>
  </div>
  <div class="section" data-test-id="search-suggestion-group">
    <div class="centerItems spaceBetween searchSpacing">
      <div class="smallFont title">Tracks</div><a class="smallFont link" data-test-id="viewAllLink"> View all </a>
    </div>
    <div class="trackPlayPauseHover centerItems searchItem">
      <div class="overlapWrapper trackPlayPause withImage">
        <div class="centerAll preloadImage overlap preloadImage"><span class="skeletonLoader"><span class="visuallyHidden">Loading image</span></span><img alt="Image" class="image" draggable="false" loading="lazy" src="image"></div>
        <p class="overlap trackNumber visuallyHidden">1</p>
        <div class="overlap playPauseWrapper"><button class="centerItems buttonLink centerAll themeHoverButton buttonLink centerAll themeHoverButton buttonLink" draggable="false" type="button">
            <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden"> Play track </span>
          </button></div>
      </div>
      <div class="searchName"><span class="clamp">name</span>
        <div class="clampWrapper">
          <ul class="commaList clamp smallFont noTouchEventsMobile">
            <li data-test-id="artist-list-item"><a aria-label="Go to artist name" class="link">name</a></li>
            <li data-test-id="artist-list-item"><a aria-label="Go to artist name1" class="link">name1</a></li>
          </ul>
        </div>
      </div><button class="centerItems buttonLink" draggable="false" type="button" title="Add to queue">
        <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden"> Add to queue </span>
      </button>
    </div>
  </div>
</div>"
`;

exports[`SearchSuggestions > when the showSuggestions prop is true > when the loading prop is true > matches the snapshot 1`] = `
"<div>
  <div class="centerItems spaceBetween">
    <div></div>
    <div class="centerItems"><button class="centerItems buttonLink" draggable="false" type="button" title="Close search suggestions">
        <phx aria-hidden="true" class="icon" size="24" weight="bold"></phx><span class="clamp text visuallyHidden"> Close </span>
      </button></div>
  </div><span class="centerItems spinningLoader centerAll loader"><phcirclenotch class="icon" size="24"></phcirclenotch><span class="visuallyHidden">Loading...</span></span>
</div>"
`;
